// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`description_step StepRuleDescriptionComponent renders correctly against snapshot when columns is "multi" 1`] = `
<EuiFlexGroup>
  <EuiFlexItem
    data-test-subj="listItemColumnStepRuleDescription"
    key="description-step-rule-0"
  >
    <EuiDescriptionList
      listItems={
        Array [
          Object {
            "description": "Query with rule-id",
            "title": "Name",
          },
          Object {
            "description": "24/7",
            "title": "Description",
          },
          Object {
            "description": <Memo(SeverityBadgeComponent)
              value="low"
            />,
            "title": "Severity",
          },
          Object {
            "description": 21,
            "title": "Risk score",
          },
          Object {
            "description": <EuiText
              size="s"
            >
              <ul>
                <li
                  data-test-subj="urlsDescriptionReferenceLinkItem"
                >
                  <EuiLink
                    external={true}
                    href="www.test.co"
                    target="_blank"
                  >
                    www.test.co
                  </EuiLink>
                </li>
              </ul>
            </EuiText>,
            "title": "Reference URLs",
          },
        ]
      }
    />
  </EuiFlexItem>
  <EuiFlexItem
    data-test-subj="listItemColumnStepRuleDescription"
    key="description-step-rule-1"
  >
    <EuiDescriptionList
      listItems={
        Array [
          Object {
            "description": <EuiText
              size="s"
            >
              <ul>
                <li
                  data-test-subj="unorderedListArrayDescriptionItem"
                >
                  test
                </li>
              </ul>
            </EuiText>,
            "title": "False positive examples",
          },
          Object {
            "description": <Styled(EuiFlexGroup)
              direction="column"
            >
              <EuiFlexItem>
                <EuiLink
                  data-test-subj="threatTacticLink"
                  href="reference1"
                  target="_blank"
                >
                  
                </EuiLink>
                <EuiFlexGroup
                  alignItems="flexStart"
                  direction="column"
                  gutterSize="none"
                >
                  <EuiFlexItem>
                    <Styled(EuiButtonEmpty)
                      data-test-subj="threatTechniqueLink"
                      flush="left"
                      href="technique reference"
                      iconType="test-file-stub"
                      size="xs"
                      target="_blank"
                    >
                      
                    </Styled(EuiButtonEmpty)>
                  </EuiFlexItem>
                </EuiFlexGroup>
              </EuiFlexItem>
              <EuiSpacer />
            </Styled(EuiFlexGroup)>,
            "title": "MITRE ATT&CK™",
          },
          Object {
            "description": <EuiFlexGroup
              gutterSize="xs"
              responsive={false}
              wrap={true}
            >
              <EuiFlexItem
                grow={false}
              >
                <Styled(EuiBadge)
                  color="hollow"
                  data-test-subj="stringArrayDescriptionBadgeItem"
                >
                  tag1
                </Styled(EuiBadge)>
              </EuiFlexItem>
              <EuiFlexItem
                grow={false}
              >
                <Styled(EuiBadge)
                  color="hollow"
                  data-test-subj="stringArrayDescriptionBadgeItem"
                >
                  tag2
                </Styled(EuiBadge)>
              </EuiFlexItem>
            </EuiFlexGroup>,
            "title": "Tags",
          },
          Object {
            "description": <Styled(EuiFlexItem)>
              <div
                className="eui-yScrollWithShadows"
                data-test-subj="noteDescriptionItem"
              >
                # this is some markdown documentation
              </div>
            </Styled(EuiFlexItem)>,
            "title": "Investigation guide",
          },
        ]
      }
    />
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`description_step StepRuleDescriptionComponent renders correctly against snapshot when columns is "single" 1`] = `
<EuiFlexGroup>
  <EuiFlexItem
    data-test-subj="listItemColumnStepRuleDescription"
  >
    <EuiDescriptionList
      listItems={
        Array [
          Object {
            "description": "Query with rule-id",
            "title": "Name",
          },
          Object {
            "description": "24/7",
            "title": "Description",
          },
          Object {
            "description": <Memo(SeverityBadgeComponent)
              value="low"
            />,
            "title": "Severity",
          },
          Object {
            "description": 21,
            "title": "Risk score",
          },
          Object {
            "description": <EuiText
              size="s"
            >
              <ul>
                <li
                  data-test-subj="urlsDescriptionReferenceLinkItem"
                >
                  <EuiLink
                    external={true}
                    href="www.test.co"
                    target="_blank"
                  >
                    www.test.co
                  </EuiLink>
                </li>
              </ul>
            </EuiText>,
            "title": "Reference URLs",
          },
          Object {
            "description": <EuiText
              size="s"
            >
              <ul>
                <li
                  data-test-subj="unorderedListArrayDescriptionItem"
                >
                  test
                </li>
              </ul>
            </EuiText>,
            "title": "False positive examples",
          },
          Object {
            "description": <Styled(EuiFlexGroup)
              direction="column"
            >
              <EuiFlexItem>
                <EuiLink
                  data-test-subj="threatTacticLink"
                  href="reference1"
                  target="_blank"
                >
                  
                </EuiLink>
                <EuiFlexGroup
                  alignItems="flexStart"
                  direction="column"
                  gutterSize="none"
                >
                  <EuiFlexItem>
                    <Styled(EuiButtonEmpty)
                      data-test-subj="threatTechniqueLink"
                      flush="left"
                      href="technique reference"
                      iconType="test-file-stub"
                      size="xs"
                      target="_blank"
                    >
                      
                    </Styled(EuiButtonEmpty)>
                  </EuiFlexItem>
                </EuiFlexGroup>
              </EuiFlexItem>
              <EuiSpacer />
            </Styled(EuiFlexGroup)>,
            "title": "MITRE ATT&CK™",
          },
          Object {
            "description": <EuiFlexGroup
              gutterSize="xs"
              responsive={false}
              wrap={true}
            >
              <EuiFlexItem
                grow={false}
              >
                <Styled(EuiBadge)
                  color="hollow"
                  data-test-subj="stringArrayDescriptionBadgeItem"
                >
                  tag1
                </Styled(EuiBadge)>
              </EuiFlexItem>
              <EuiFlexItem
                grow={false}
              >
                <Styled(EuiBadge)
                  color="hollow"
                  data-test-subj="stringArrayDescriptionBadgeItem"
                >
                  tag2
                </Styled(EuiBadge)>
              </EuiFlexItem>
            </EuiFlexGroup>,
            "title": "Tags",
          },
          Object {
            "description": <Styled(EuiFlexItem)>
              <div
                className="eui-yScrollWithShadows"
                data-test-subj="noteDescriptionItem"
              >
                # this is some markdown documentation
              </div>
            </Styled(EuiFlexItem)>,
            "title": "Investigation guide",
          },
        ]
      }
    />
  </EuiFlexItem>
</EuiFlexGroup>
`;

exports[`description_step StepRuleDescriptionComponent renders correctly against snapshot when columns is "singleSplit 1`] = `
<EuiFlexGroup>
  <EuiFlexItem
    data-test-subj="listItemColumnStepRuleDescription"
  >
    <Styled(EuiDescriptionList)
      data-test-subj="singleSplitStepRuleDescriptionList"
      listItems={
        Array [
          Object {
            "description": "Query with rule-id",
            "title": "Name",
          },
          Object {
            "description": "24/7",
            "title": "Description",
          },
          Object {
            "description": <Memo(SeverityBadgeComponent)
              value="low"
            />,
            "title": "Severity",
          },
          Object {
            "description": 21,
            "title": "Risk score",
          },
          Object {
            "description": <EuiText
              size="s"
            >
              <ul>
                <li
                  data-test-subj="urlsDescriptionReferenceLinkItem"
                >
                  <EuiLink
                    external={true}
                    href="www.test.co"
                    target="_blank"
                  >
                    www.test.co
                  </EuiLink>
                </li>
              </ul>
            </EuiText>,
            "title": "Reference URLs",
          },
          Object {
            "description": <EuiText
              size="s"
            >
              <ul>
                <li
                  data-test-subj="unorderedListArrayDescriptionItem"
                >
                  test
                </li>
              </ul>
            </EuiText>,
            "title": "False positive examples",
          },
          Object {
            "description": <Styled(EuiFlexGroup)
              direction="column"
            >
              <EuiFlexItem>
                <EuiLink
                  data-test-subj="threatTacticLink"
                  href="reference1"
                  target="_blank"
                >
                  
                </EuiLink>
                <EuiFlexGroup
                  alignItems="flexStart"
                  direction="column"
                  gutterSize="none"
                >
                  <EuiFlexItem>
                    <Styled(EuiButtonEmpty)
                      data-test-subj="threatTechniqueLink"
                      flush="left"
                      href="technique reference"
                      iconType="test-file-stub"
                      size="xs"
                      target="_blank"
                    >
                      
                    </Styled(EuiButtonEmpty)>
                  </EuiFlexItem>
                </EuiFlexGroup>
              </EuiFlexItem>
              <EuiSpacer />
            </Styled(EuiFlexGroup)>,
            "title": "MITRE ATT&CK™",
          },
          Object {
            "description": <EuiFlexGroup
              gutterSize="xs"
              responsive={false}
              wrap={true}
            >
              <EuiFlexItem
                grow={false}
              >
                <Styled(EuiBadge)
                  color="hollow"
                  data-test-subj="stringArrayDescriptionBadgeItem"
                >
                  tag1
                </Styled(EuiBadge)>
              </EuiFlexItem>
              <EuiFlexItem
                grow={false}
              >
                <Styled(EuiBadge)
                  color="hollow"
                  data-test-subj="stringArrayDescriptionBadgeItem"
                >
                  tag2
                </Styled(EuiBadge)>
              </EuiFlexItem>
            </EuiFlexGroup>,
            "title": "Tags",
          },
          Object {
            "description": <Styled(EuiFlexItem)>
              <div
                className="eui-yScrollWithShadows"
                data-test-subj="noteDescriptionItem"
              >
                # this is some markdown documentation
              </div>
            </Styled(EuiFlexItem)>,
            "title": "Investigation guide",
          },
        ]
      }
      type="column"
    />
  </EuiFlexItem>
</EuiFlexGroup>
`;
